@@ -20,10 +20,11 @@ import java.net.http.HttpRequest.BodyPublishers;
 import java.net.http.HttpRequest.Builder;
 import java.net.http.HttpResponse;
 import java.net.http.HttpResponse.BodyHandlers;
+import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -103,7 +104,7 @@ public class GenericRequest implements Runnable {
   private Boolean allowRedirect = null;
 
   public static final Pattern REDIRECT_PATTERN =
-      Pattern.compile("([^\\/]*)\\/(login\\.php.*)", Pattern.DOTALL);
+      Pattern.compile("([^/]*)/(login\\.php.*)", Pattern.DOTALL);
   public static final Pattern JS_REDIRECT_PATTERN =
       Pattern.compile(">\\s*top.mainpane.document.location\\s*=\\s*\"(.*?)\";");
 
@@ -152,7 +153,7 @@ public class GenericRequest implements Runnable {
   // Per-login data
 
   private static String userAgent = "";
-  public static final Set<ServerCookie> serverCookies = new LinkedHashSet<ServerCookie>();
+  public static final Set<ServerCookie> serverCookies = new LinkedHashSet<>();
   public static String sessionId = null;
   public static String passwordHash = "";
   public static String passwordHashValue = "";
@@ -343,7 +344,7 @@ public class GenericRequest implements Runnable {
    * @param newURLString The form to be used in posting data
    */
   public GenericRequest(final String newURLString, final boolean usePostMethod) {
-    this.data = Collections.synchronizedList(new ArrayList<String>());
+    this.data = Collections.synchronizedList(new ArrayList<>());
     if (!newURLString.equals("")) {
       this.constructURLString(newURLString, usePostMethod);
     }
@@ -473,9 +474,9 @@ public class GenericRequest implements Runnable {
     }
 
     String[] tokens = fields.split("&");
-    for (int i = 0; i < tokens.length; ++i) {
-      if (tokens[i].length() > 0) {
-        this.addFormField(tokens[i], encoded);
+    for (String token : tokens) {
+      if (token.length() > 0) {
+        this.addFormField(token, encoded);
       }
     }
   }
@@ -500,7 +501,7 @@ public class GenericRequest implements Runnable {
   public void addFormField(final String name, final String value, final boolean allowDuplicates) {
     this.dataChanged = true;
 
-    String charset = this.isChatRequest ? "ISO-8859-1" : "UTF-8";
+    Charset charset = this.isChatRequest ? StandardCharsets.ISO_8859_1 : StandardCharsets.UTF_8;
 
     String encodedName = name + "=";
     String encodedValue = value == null ? "" : GenericRequest.encodeURL(value, charset);
@@ -601,10 +602,10 @@ public class GenericRequest implements Runnable {
     if (equalIndex != -1) {
       String name = element.substring(0, equalIndex).trim();
       String value = element.substring(equalIndex + 1).trim();
-      String charset = this.isChatRequest ? "ISO-8859-1" : "UTF-8";
+      Charset charset = this.isChatRequest ? StandardCharsets.ISO_8859_1 : StandardCharsets.UTF_8;
 
       // The name may or may not be encoded.
-      name = GenericRequest.decodeField(name, "UTF-8");
+      name = GenericRequest.decodeField(name, StandardCharsets.UTF_8);
       value = GenericRequest.decodeField(value, charset);
 
       // But we want to always submit value encoded.
@@ -614,9 +615,8 @@ public class GenericRequest implements Runnable {
     }
 
     synchronized (this.data) {
-      Iterator<String> it = this.data.iterator();
-      while (it.hasNext()) {
-        if (it.next().equals(element)) {
+      for (String datum : this.data) {
+        if (datum.equals(element)) {
           return;
         }
       }
@@ -636,11 +636,7 @@ public class GenericRequest implements Runnable {
     }
 
     String[] tokens = this.formURLString.substring(index + 1).split("&");
-    List<String> fields = new ArrayList<String>();
-    for (int i = 0; i < tokens.length; ++i) {
-      fields.add(tokens[i]);
-    }
-    return fields;
+    return Arrays.asList(tokens);
   }
 
   public String getFormField(final String key) {
@@ -652,9 +648,7 @@ public class GenericRequest implements Runnable {
   }
 
   private String findField(final List<String> data, final String key, final boolean decode) {
-    for (int i = 0; i < data.size(); ++i) {
-      String datum = data.get(i);
-
+    for (String datum : data) {
       int splitIndex = datum.indexOf("=");
       if (splitIndex == -1) {
         continue;
@@ -669,7 +663,7 @@ public class GenericRequest implements Runnable {
 
       if (decode) {
         // Chat was encoded as ISO-8859-1, so decode it that way.
-        String charset = this.isChatRequest ? "ISO-8859-1" : "UTF-8";
+        Charset charset = this.isChatRequest ? StandardCharsets.ISO_8859_1 : StandardCharsets.UTF_8;
         return GenericRequest.decodeField(value, charset);
       }
       return value;
@@ -683,50 +677,39 @@ public class GenericRequest implements Runnable {
       return null;
     }
 
-    String oldURLString = null;
+    String oldURLString;
     String newURLString = urlString;
 
-    try {
-      do {
-        oldURLString = newURLString;
-        newURLString = URLDecoder.decode(oldURLString, "UTF-8");
-      } while (!oldURLString.equals(newURLString));
-    } catch (IOException e) {
-    }
+    do {
+      oldURLString = newURLString;
+      newURLString = URLDecoder.decode(oldURLString, StandardCharsets.UTF_8);
+    } while (!oldURLString.equals(newURLString));
 
     return newURLString;
   }
 
   public static String decodeField(final String urlString) {
-    return GenericRequest.decodeField(urlString, "UTF-8");
+    return GenericRequest.decodeField(urlString, StandardCharsets.UTF_8);
   }
 
-  public static String decodeField(final String value, final String charset) {
+  public static String decodeField(final String value, final Charset charset) {
     if (value == null) {
       return null;
     }
 
-    try {
-      return URLDecoder.decode(value, charset);
-    } catch (IOException e) {
-      return value;
-    }
+    return URLDecoder.decode(value, charset);
   }
 
   public static String encodeURL(final String urlString) {
-    return GenericRequest.encodeURL(urlString, "UTF-8");
+    return GenericRequest.encodeURL(urlString, StandardCharsets.UTF_8);
   }
 
-  public static String encodeURL(final String urlString, final String charset) {
+  public static String encodeURL(final String urlString, final Charset charset) {
     if (urlString == null) {
       return null;
     }
 
-    try {
-      return URLEncoder.encode(urlString, charset);
-    } catch (IOException e) {
-      return urlString;
-    }
+    return URLEncoder.encode(urlString, charset);
   }
 
   public void removeFormField(final String name) {
@@ -781,9 +764,7 @@ public class GenericRequest implements Runnable {
     String hashField = this.getHashField();
 
     synchronized (this.data) {
-      for (int i = 0; i < this.data.size(); ++i) {
-        String element = this.data.get(i);
-
+      for (String element : this.data) {
         if (element.equals("")) {
           continue;
         }
@@ -827,9 +808,7 @@ public class GenericRequest implements Runnable {
     StringBuilder dataBuffer = new StringBuilder();
 
     synchronized (this.data) {
-      for (int i = 0; i < this.data.size(); ++i) {
-        String element = this.data.get(i);
-
+      for (String element : this.data) {
         if (element.equals("")) {
           continue;
         }
@@ -863,8 +842,7 @@ public class GenericRequest implements Runnable {
 
     int end = urlString.indexOf("&", start);
     if (end == -1) {
-      String prefix = urlString.substring(0, start - 1);
-      return prefix;
+      return urlString.substring(0, start - 1);
     }
 
     String prefix = urlString.substring(0, start);
@@ -1291,7 +1269,9 @@ public class GenericRequest implements Runnable {
       AdventureResult comedyItem = ItemPool.get(comedyItemID, 1);
       String text = null;
 
-      try (Checkpoint checkpoint = new Checkpoint()) {
+      Checkpoint checkpoint = new Checkpoint();
+
+      try (checkpoint) {
         if (KoLConstants.inventory.contains(comedyItem)) {
           // Unequip any 2-handed weapon before equipping an offhand
           if (offhand) {
@@ -1489,7 +1469,7 @@ public class GenericRequest implements Runnable {
           if (delim) {
             cookies.append("; ");
           }
-          cookies.append(cookie.toString());
+          cookies.append(cookie);
           delim = true;
         }
       }
@@ -1608,6 +1588,14 @@ public class GenericRequest implements Runnable {
         StaticEntity.printStackTrace(e, message);
       }
 
+      if (errorMessage != null
+          && (errorMessage.contains("GOAWAY")
+              || errorMessage.contains("parser received no bytes"))) {
+        ++this.timeoutCount;
+        if (this.timeoutCount < TIMEOUT_LIMIT) {
+          return this.sendRequest();
+        }
+      }
       RequestLogger.printLine(MafiaState.ERROR, message);
       this.timeoutCount = TIMEOUT_LIMIT;
       return true;
@@ -1623,7 +1611,7 @@ public class GenericRequest implements Runnable {
    * @return <code>true</code> if the data was successfully retrieved
    */
   private boolean retrieveServerReply() {
-    InputStream istream = null;
+    InputStream istream;
 
     if (this.shouldUpdateDebugLog()) {
       RequestLogger.updateDebugLog("Retrieving server reply...");
@@ -1686,7 +1674,7 @@ public class GenericRequest implements Runnable {
                 this.allowRedirect = InputFieldUtilities.confirm(message);
               }
 
-              if (this.allowRedirect.booleanValue()) {
+              if (this.allowRedirect) {
                 this.redirectLocation =
                     this.data.isEmpty() ? location : location + "?" + this.getDisplayDataString();
               }
@@ -1722,7 +1710,7 @@ public class GenericRequest implements Runnable {
       this.setCookies();
     }
 
-    boolean shouldStop = false;
+    boolean shouldStop;
 
     try {
       if (this.responseCode == 200) {
@@ -1739,6 +1727,7 @@ public class GenericRequest implements Runnable {
           KoLmafia.updateDisplay("Waiting 40 seconds for KoL to finish processing...");
           pauser.pause(40 * 1000);
           StorageRequest.emptyStorage(this.formURLString);
+          istream.close();
           return true;
         }
 
@@ -1754,14 +1743,13 @@ public class GenericRequest implements Runnable {
         }
 
         istream.close();
-        shouldStop = (this.redirectLocation != null) ? this.handleServerRedirect() : true;
+        shouldStop = this.redirectLocation == null || this.handleServerRedirect();
       }
     } catch (IOException e) {
       StaticEntity.printStackTrace(e);
       return true;
     }
 
-    istream = null;
     return shouldStop || KoLmafia.refusesContinue();
   }
 
@@ -1996,9 +1984,7 @@ public class GenericRequest implements Runnable {
       // You have been redirected to a fight! Here, you need
       // to complete the fight before you can continue.
 
-      if (this == ChoiceManager.CHOICE_HANDLER
-          || this instanceof AdventureRequest
-          || this instanceof BasementRequest) {
+      if (this == ChoiceManager.CHOICE_HANDLER || this instanceof AdventureRequest) {
         this.redirectHandled = true;
         FightRequest.INSTANCE.run(this.redirectLocation);
         return !LoginRequest.isInstanceRunning();
@@ -2403,7 +2389,7 @@ public class GenericRequest implements Runnable {
     }
 
     int itemId = item.getItemId();
-    String itemName = null;
+    String itemName;
     boolean consumed = false;
     String nextAdventure = null;
 
@@ -2797,7 +2783,7 @@ public class GenericRequest implements Runnable {
     }
 
     int choice = ChoiceManager.lastChoice;
-    String name = null;
+    String name;
 
     switch (choice) {
       case 1201:
@@ -2838,7 +2824,7 @@ public class GenericRequest implements Runnable {
     }
 
     int skillId = UseSkillRequest.getSkillId(location);
-    String skillName = null;
+    String skillName;
 
     switch (skillId) {
       case SkillPool.RAIN_MAN:
@@ -3057,7 +3043,7 @@ public class GenericRequest implements Runnable {
         : value;
   }
 
-  public class ServerCookie implements Comparable<ServerCookie> {
+  public static class ServerCookie implements Comparable<ServerCookie> {
     private String name = "";
     private String value = "";
     private String path = "";
